fix() : avoid deleting lang when saving new parking